log
Thu Apr 16 08:01:52 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
1580034
Thu Apr 16 08:09:12 PM UTC 2026: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:25: error: ‘capacity’ undeclared (first use in this function)
   62 |     int pos = hash(key, capacity);
      |                         ^~~~~~~~
hashmap.c:62:25: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:63:61: error: comparison between pointer and integer [-Werror]
   63 |     if (map->buckets[pos] != NULL || map->buckets[pos]->key != -1){
      |                                                             ^~
cc1: all warnings being treated as errors
15acf2f
Thu Apr 16 08:09:42 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:61: error: comparison between pointer and integer [-Werror]
   63 |     if (map->buckets[pos] != NULL || map->buckets[pos]->key != -1){
      |                                                             ^~
cc1: all warnings being treated as errors
77cf559
Thu Apr 16 08:10:42 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d437109
Thu Apr 16 08:12:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8d6f2d7
Thu Apr 16 08:13:53 PM UTC 2026: 
 tests:  0|0
1b91b50
Thu Apr 16 08:16:17 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9d3a39a
Thu Apr 16 08:18:09 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:35: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   63 |     if (map->capacity < 1) return NULL;
      |                                   ^~~~
hashmap.c:61:6: note: declared here
   61 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
1963907
Thu Apr 16 08:18:20 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1e63560
Thu Apr 16 08:19:32 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
19e9b65
Thu Apr 16 08:20:41 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
1cd8507
Thu Apr 16 08:22:15 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b04216c
Thu Apr 16 08:23:29 PM UTC 2026: 
 tests:  0|0
90ae406
Thu Apr 16 08:23:59 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
c224bc0
Thu Apr 16 08:25:25 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:64:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   64 |         pos = (pos+1) % (map->capacity);
      |         ^~~
hashmap.c:64:40: error: expected ‘)’ before ‘;’ token
   64 |         pos = (pos+1) % (map->capacity);
      |                                        ^
      |                                        )
hashmap.c:63:11: note: to match this ‘(’
   63 |     while (//map->buckets[pos] != NULL) ||// map->buckets[pos]->key != NULL){
      |           ^
hashmap.c:65:5: error: expected expression before ‘}’ token
   65 |     }
      |     ^
hashmap.c: At top level:
hashmap.c:66:27: error: ‘key’ undeclared here (not in a function); did you mean ‘key_t’?
   66 |     Pair* par= createPair(key, value);
      |                           ^~~
      |                           key_t
hashmap.c:66:32: error: ‘value’ undeclared here (not in a function)
   66 |     Pair* par= createPair(key, value);
      |                                ^~~~~
hashmap.c:67:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   67 |     map->buckets[pos] = par;
      |        ^~
hashmap.c:68:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   68 |     map->current = pos;
      |        ^~
hashmap.c:69:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   69 |     map->size ++;
      |        ^~
hashmap.c:70:1: error: expected identifier or ‘(’ before ‘}’ token
   70 | }
      | ^
cc1: all warnings being treated as errors
c9dd8fd
Thu Apr 16 08:25:48 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e0b8f98
